{
    "name": "MasterInput",
    "maps": [
        {
            "name": "Movement",
            "id": "7f4ffa02-7e0b-40e7-b8a2-e50a545724d0",
            "actions": [
                {
                    "name": "ForwardDown",
                    "type": "Button",
                    "id": "3a7a120d-9bcb-46e5-a6f7-aa9d430c9ec5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ForwardUp",
                    "type": "Button",
                    "id": "cfad8e85-53d2-4034-af6f-b95fad602d2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackwardDown",
                    "type": "Button",
                    "id": "ca86f04e-4291-4073-822e-688e6f341c7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackwardUp",
                    "type": "Button",
                    "id": "5556d967-0485-4e9e-b6a8-787e65311586",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftUp",
                    "type": "Button",
                    "id": "a62df03c-afba-41a8-bbb8-2129baef9404",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftDown",
                    "type": "Button",
                    "id": "4764021b-c0c0-4ce2-99bc-b08d76e77b79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightDown",
                    "type": "Button",
                    "id": "8e2361c2-9410-4564-8e13-ac0720cb1b68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightUp",
                    "type": "Button",
                    "id": "358bdc10-5964-46a5-aaaa-350d4bd8a308",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24523bf1-f039-4612-acd4-2cc432f07d2d",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84e7bb13-4d3e-4372-8c2e-a9d3294d8759",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ece3b26d-8ac5-41e8-b812-69d6b889b270",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BackwardDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dde02dcf-fc9c-4487-94b0-d91ad3877d4f",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "BackwardUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a46ca42-3166-4487-9d99-7ebaacec73c6",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d2dc85a-14c4-4127-b788-a019311fff1a",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29b6dbc5-6bec-4842-bafd-2b75806e8ce2",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f9f27dd-85af-4afa-8b12-e6323f2c4593",
                    "path": "<Keyboard>/d",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "1f37f863-d968-4fff-ba81-64096c776412",
            "actions": [
                {
                    "name": "delta",
                    "type": "PassThrough",
                    "id": "8375ab30-93a7-4449-b083-dcc46be4e8de",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "rightClickDown",
                    "type": "Button",
                    "id": "35b093aa-a3fd-4a52-8bf3-85588d7281a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "leftClickDown",
                    "type": "Button",
                    "id": "58892116-7c15-4577-a618-bb8817fc9618",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "leftClickUp",
                    "type": "Button",
                    "id": "3853797b-c8d0-4a01-a765-cb69bf32d050",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "rightClickUp",
                    "type": "Button",
                    "id": "cb742452-15fe-4645-8f35-e9074dcd1129",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "position",
                    "type": "Value",
                    "id": "3b564b5a-f7df-490e-994f-9d9be43be621",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1eae655d-326e-485f-995a-aeef8552dad4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a63382d-f8e7-45b1-9ee0-c89580caae61",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "rightClickDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97643555-a50b-4273-9027-0c8fada0667b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "rightClickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32033973-237f-42aa-be72-1d9ce0b39323",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "513b014f-8cfe-4fe4-8b08-dd46b4f9c216",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "leftClickDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13bb7b0e-dead-4e87-ae4c-d18f615a9c16",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "leftClickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Misc",
            "id": "d88681cd-9db9-4cd2-8161-abebef3cfaec",
            "actions": [
                {
                    "name": "DevicePulse",
                    "type": "Button",
                    "id": "39ca9bbf-698f-41ef-b0b7-cfdc45c855c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "0a5f3d42-cb84-43a8-93e3-d1249326f10b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0e806b30-dd80-4e91-a1da-8a49bc86c2e6",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "DevicePulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad0c1b59-0ceb-4c9f-9fcb-1a302abd612f",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}